修复了之前的一些问题
1.将前端的选项直接修改为代码的名称
2.修复了无法正确获取large类型的数目的bug

--- a/hybrid_cloud/templates/dag.html
+++ b/hybrid_cloud/templates/dag.html
@@ -4,8 +4,8 @@
 <li><a href="/index/">Main Page</a></li>
 <li ><a href="/overview/">Overview Page </a></li>
 <li><a href="/instance/">Instance Manage</a></li>
-<li><a href="/create/">Virtual instance</a> </li>
-<li  class="active"><a href="/app/">App<span class="sr-only">(current)</span></a></li>
+<li><a href="/create/">ODA scheduler</a> </li>
+<li  class="active"><a href="/dag/">DAG scheduler<span class="sr-only">(current)</span></a></li>
 {% endblock %}
 
 
