--- a/hybrid_cloud/templates/overview.html
+++ b/hybrid_cloud/templates/overview.html
@@ -5,6 +5,7 @@
 <li class="active"><a href="/overview/">Overview Page <span class="sr-only">(current)</span></a></li>
 <li><a href="/instance/">Instance Manage</a></li>
 <li><a href="/create/">Virtual instance</a></li>
+<li><a href="/dag/">DAG scheduler</a></li>
 {% endblock %}
 
 
