--- a/hybrid_cloud/templates/create.html
+++ b/hybrid_cloud/templates/create.html
@@ -4,7 +4,8 @@
 <li><a href="/index/">Main Page</a></li>
 <li ><a href="/overview/">Overview Page </a></li>
 <li><a href="/instance/">Instance Manage</a></li>
-<li  class="active"><a href="/create/">Virtual instance<span class="sr-only">(current)</span></a></li>
+<li  class="active"><a href="/create/">ODA scheduler<span class="sr-only">(current)</span></a></li>
+<li><a href="/dag/">DAG scheduler</a></li>
 {% endblock %}
 
 
