--- a/hybrid_cloud/templates/index.html
+++ b/hybrid_cloud/templates/index.html
@@ -3,7 +3,8 @@
 <li class="active"><a href="/index/">Main Page <span class="sr-only">(current)</span></a></li>
 <li><a href="/overview/">Overview Page</a></li>
 <li><a href="/instance/">Instance Manage</a></li>
-<li><a href="/create/">Virtual instance</a></li>
+<li><a href="/create/">ODA scheduler</a> </li>
+<li><a href="/dag/">DAG scheduler</a></li>
 {% endblock %}
 
 
