--- a/hybrid_cloud/templates/instance.html
+++ b/hybrid_cloud/templates/instance.html
@@ -4,7 +4,8 @@
 <li><a href="/index/">Main Page</a></li>
 <li ><a href="/overview/">Overview Page </a></li>
 <li class="active"><a href="/instance/">Instance Manage<span class="sr-only">(current)</span></a></li>
-<li><a href="/create/">Virtual instance</a></li>
+<li><a href="/create/">ODA scheduler</a></li>
+<li><a href="/dag/">DAG scheduler</a></li>
 {% endblock %}
 
 
@@ -13,12 +14,9 @@
   <h2>虚拟机管理界面&nbsp;<small>欢迎使用虚拟机管理界面</small></h2>
 </div>
 <div class="page-header">
-  <h3>虚拟机创建</h3>
+  <h3>虚拟机信息</h3>
 </div>
 
-<div class="btn-group">
-    <button type="button" class="btn btn-primary">创建虚拟机</button>
-</div>
 
 <div class="page-header">
   <h3>私有云虚拟机</h3>
