弹性伸缩和说明修改
1. 增加了弹性伸缩的文档
2. 对前端描述不准确的地方作了修改
3. 删掉了一点废话

--- a/hybrid_cloud/templates/create.html
+++ b/hybrid_cloud/templates/create.html
@@ -6,13 +6,14 @@
 <li><a href="/instance/">Instance Manage</a></li>
 <li  class="active"><a href="/create/">ODA scheduler<span class="sr-only">(current)</span></a></li>
 <li><a href="/dag/">DAG scheduler</a></li>
+<li><a href="/auto_scale/">Auto Scaling</a></li>
 {% endblock %}
 
 
 
 {% block content %}
 <div class="page-header">
-  <h2>虚拟机创建界面&nbsp;<small>欢迎使用虚拟机创建界面</small></h2>
+  <h2>ODA应用调度功能&nbsp;<small>欢迎使用ODA应用调度功能</small></h2>
 </div>
 <div class="page-header">
   <h3>虚拟机创建</h3>
