--- a/hybrid_cloud/templates/dag.html
+++ b/hybrid_cloud/templates/dag.html
@@ -6,21 +6,17 @@
 <li><a href="/instance/">Instance Manage</a></li>
 <li><a href="/create/">ODA scheduler</a> </li>
 <li  class="active"><a href="/dag/">DAG scheduler<span class="sr-only">(current)</span></a></li>
+<li><a href="/auto_scale/">Auto Scaling</a></li>
 {% endblock %}
 
 
 
 {% block content %}
 <div class="page-header">
-    <h2>应用创建&nbsp;<small>欢迎使用应用创建界面</small></h2>
+    <h2>DAG应用调度功能&nbsp;<small>欢迎使用DAG应用调度功能</small></h2>
 </div>
 <div class="page-header">
     <h3>应用创建</h3>
-</div>
-
-<div class="alert alert-warning alert-dismissible" role="alert">
-    <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-    测试一下
 </div>
 
 <div class="page-header">
