--- a/hybrid_cloud/templates/instance.html
+++ b/hybrid_cloud/templates/instance.html
@@ -6,6 +6,7 @@
 <li class="active"><a href="/instance/">Instance Manage<span class="sr-only">(current)</span></a></li>
 <li><a href="/create/">ODA scheduler</a></li>
 <li><a href="/dag/">DAG scheduler</a></li>
+<li><a href="/auto_scale/">Auto Scaling</a></li>
 {% endblock %}
 
 
