--- a/hybrid_cloud/templates/login.html
+++ b/hybrid_cloud/templates/login.html
@@ -37,8 +37,8 @@
         <form class="loginbox" action="">
             <ul>
                 <li><input id="inputUser" name="" type="text" class="loginuser" value=""/></li>
-                <li><input id="inputPwd" name="" type="text" class="loginpwd" value="" onclick="JavaScript:this.value=''"/></li>
-                <li><input id="loginBtn" name="" type="button" class="loginbtn1" value="登录"/>
+                <li><input id="inputPwd" name="" type="password" class="loginpwd" value="" onclick="JavaScript:this.value=''"/></li>
+                <li><input id="loginBtn" name="" type="button" class="loginbtn1" value="登录"/></li>
                 <li><div id="loginTips" style="display:none;color:red;font-size:16px">username or password wrong!</div></li>
             </ul>
         </form>
