--- a/hybrid_cloud/templates/index.html
+++ b/hybrid_cloud/templates/index.html
@@ -5,6 +5,7 @@
 <li><a href="/instance/">Instance Manage</a></li>
 <li><a href="/create/">ODA scheduler</a> </li>
 <li><a href="/dag/">DAG scheduler</a></li>
+<li><a href="/auto_scale/">Auto Scaling</a></li>
 {% endblock %}
 
 
