--- a/hybrid_cloud/templates/overview.html
+++ b/hybrid_cloud/templates/overview.html
@@ -6,6 +6,7 @@
 <li><a href="/instance/">Instance Manage</a></li>
 <li><a href="/create/">Virtual instance</a></li>
 <li><a href="/dag/">DAG scheduler</a></li>
+<li><a href="/auto_scale/">Auto Scaling</a></li>
 {% endblock %}
 
 
