增加了一个基本调度策略和监控功能
1.增加了面向价格、安全等考量的基本调度策略。
2.增加了对私有云上实例资源情况的监控功能

--- a/hybrid_cloud/templates/index.html
+++ b/hybrid_cloud/templates/index.html
@@ -3,6 +3,7 @@
 <li class="active"><a href="/index/">Main Page <span class="sr-only">(current)</span></a></li>
 <li><a href="/overview/">Overview Page</a></li>
 <li><a href="/instance/">Instance Manage</a></li>
+<li><a href="/instance/">Basic Strategy</a></li>
 <li><a href="/create/">ODA scheduler</a> </li>
 <li><a href="/dag/">DAG scheduler</a></li>
 <li><a href="/auto_scale/">Auto Scaling</a></li>
