--- a/hybrid_cloud/templates/create.html
+++ b/hybrid_cloud/templates/create.html
@@ -4,6 +4,7 @@
 <li><a href="/index/">Main Page</a></li>
 <li ><a href="/overview/">Overview Page </a></li>
 <li><a href="/instance/">Instance Manage</a></li>
+<li><a href="/instance/">Basic Strategy</a></li>
 <li  class="active"><a href="/create/">ODA scheduler<span class="sr-only">(current)</span></a></li>
 <li><a href="/dag/">DAG scheduler</a></li>
 <li><a href="/auto_scale/">Auto Scaling</a></li>
