--- a/hybrid_cloud/templates/instance.html
+++ b/hybrid_cloud/templates/instance.html
@@ -4,6 +4,7 @@
 <li><a href="/index/">Main Page</a></li>
 <li ><a href="/overview/">Overview Page </a></li>
 <li class="active"><a href="/instance/">Instance Manage<span class="sr-only">(current)</span></a></li>
+<li><a href="/instance/">Basic Strategy</a></li>
 <li><a href="/create/">ODA scheduler</a></li>
 <li><a href="/dag/">DAG scheduler</a></li>
 <li><a href="/auto_scale/">Auto Scaling</a></li>
@@ -60,8 +61,8 @@
                 <td>{{instance.power_state }}</td>
                 <td>{{instance.createTime }}</td>
                 <td><select onchange="instanceAction(this)" >
-                                        <option value ="start">None</option>
 						                <option value ="start">Start</option>
+                                        <option value ="monitor">Moniter</option>
 						                <option value ="stop">Stop</option>
 						                <option value ="terminate" style="color:red">Terminate</option>
 						                </select></td>
