--- a/hybrid_cloud/templates/overview.html
+++ b/hybrid_cloud/templates/overview.html
@@ -4,7 +4,8 @@
 <li><a href="/index/">Main Page</a></li>
 <li class="active"><a href="/overview/">Overview Page <span class="sr-only">(current)</span></a></li>
 <li><a href="/instance/">Instance Manage</a></li>
-<li><a href="/create/">Virtual instance</a></li>
+<li><a href="/instance/">Basic Strategy</a></li>
+<li><a href="/create/">ODA scheduler</a></li>
 <li><a href="/dag/">DAG scheduler</a></li>
 <li><a href="/auto_scale/">Auto Scaling</a></li>
 {% endblock %}
